--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.20.5",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "react-router-dom": "^5.2.0",
     "vite": "^2.9.9"
   }
 }
