--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.51.0"
+    "react-tsparticles": "^2.0.6",
+    "sass": "^1.51.0",
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
