--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.14.0",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "nprogress": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-tsparticles": "^2.0.6",
     "sass": "^1.51.0",
     "tsparticles": "^2.0.6"
