--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-redux": "^7.2.3",
     "react-tsparticles": "^2.0.6",
+    "redux": "^4.0.5",
     "sass": "^1.51.0",
     "tsparticles": "^2.0.6"
   },
