--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-tsparticles": "^2.0.6",
     "redux": "^4.0.5",
     "sass": "^1.51.0",
-    "tsparticles": "^2.0.6"
+    "tsparticles": "^2.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
