--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.0.2",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -20,9 +22,9 @@
     "react-redux": "^7.2.3",
     "react-tsparticles": "^2.0.6",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
-    "tsparticles": "^2.0.6",
-    "redux-persist": "^6.0.0"
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
